[project]
name = "stealth-crawler"
version = "1.0.0"
description = "高级反爬虫爬虫实例 - 支持代理轮换、User-Agent 轮换、TLS 指纹模拟等反检测功能"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "qoomezhu"}
]
keywords = ["web-scraping", "crawler", "stealth", "anti-detection", "proxy-rotation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "curl-cffi>=0.6.2",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "fake-useragent>=1.4.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
async = [
    "aiohttp>=3.9.0",
]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/qoomezhu/stealth-crawler"
Repository = "https://github.com/qoomezhu/stealth-crawler"
Issues = "https://github.com/qoomezhu/stealth-crawler/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py39"
