[project]
name = "stealth-crawler"
version = "2.0.0"
description = "A maintainable Python web crawler with sync/async support, proxy pool, robots-aware access, and HTML parsing."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "qoomezhu"}
]
keywords = ["web-scraping", "crawler", "proxy", "robots", "asyncio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
stealth = [
    "curl-cffi>=0.6.2",
]
parser = [
    "lxml>=4.9.0",
]
api = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
stealth-crawler = "stealth_crawler.cli:main"

[project.urls]
Homepage = "https://github.com/qoomezhu/stealth-crawler"
Repository = "https://github.com/qoomezhu/stealth-crawler"
Issues = "https://github.com/qoomezhu/stealth-crawler/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["stealth_crawler*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py39"
